--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -75,14 +75,14 @@
     <string name="app_new_version">Descărcare finalizată. Cea mai recentă versiune a aplicației este instalată deja</string>
     <string name="app_update_install">Descărcare finalizată! Pregătit pentru instalarea versiunii actualizate</string>
     <string name="application_name">Browser</string>
-    <string name="aqi_quality_index_break">ICA %1$s</string>
-    <string name="aqi_quality_index_dangerous">ICA %1$s</string>
-    <string name="aqi_quality_index_good">ICA %1$s</string>
-    <string name="aqi_quality_index_hazardous">ICA %1$s</string>
-    <string name="aqi_quality_index_light_pollution">ICA %1$s</string>
-    <string name="aqi_quality_index_moderate">ICA %1$s</string>
-    <string name="aqi_quality_index_pure">ICA %1$s</string>
-    <string name="aqi_quality_index_unhealthy">ICA %1$s</string>
+    <string name="aqi_quality_index_break">Extrem de periculos</string>
+    <string name="aqi_quality_index_dangerous">Periculos</string>
+    <string name="aqi_quality_index_good">Bun</string>
+    <string name="aqi_quality_index_hazardous">Primejdios</string>
+    <string name="aqi_quality_index_light_pollution">Poluare ușoară</string>
+    <string name="aqi_quality_index_moderate">Moderat</string>
+    <string name="aqi_quality_index_pure">Excelent</string>
+    <string name="aqi_quality_index_unhealthy">Rău</string>
     <string name="autofill_popup_content_description">Arată sugestii de completare automată</string>
     <string name="autologin_bar_error">Imposibil de conectat</string>
     <string name="autologin_bar_hide_text">Ascundeţi</string>
@@ -230,12 +230,12 @@ Paginile pe care le accesați nu vor fi stocate în istoricul de navigare​"</s
     <string name="dialog_title_queued_body">Fișierul nu este disponibil încă</string>
     <string name="document_download_background_btn">Descărcare în fundal</string>
     <string name="document_download_cancel_btn">Renunțați</string>
-    <string name="document_download_failed">Descărcarea a eșuat</string>
-    <string name="document_download_official">Descărcare oficială</string>
+    <string name="document_download_failed">"Descărcarea a eșuat"</string>
+    <string name="document_download_official">Descărcare versiune oficială</string>
     <string name="document_download_open_direct">Deschideți direct</string>
     <string name="document_download_title">Descărcare</string>
     <string name="document_open_file">Deschideți %s</string>
-    <string name="document_open_message">Pentru a îmbunătăți experiența de citire și a vă asigura securitatea, vă recomandăm să utilizați aplicația personalizată oficială WPS</string>
+    <string name="document_open_message">Pentru a îmbunătăți experiența de citire și a vă asigura securitatea, utilizați aplicația personalizată WPS</string>
     <string name="document_open_other">Alte aplicații</string>
     <string name="document_open_title">Deschideți cu</string>
     <string name="dont_remind_again">Se memorează această alegere</string>
@@ -295,7 +295,7 @@ Paginile pe care le accesați nu vor fi stocate în istoricul de navigare​"</s
     <string name="error_unauthorized">Sincronizarea cu contul dvs. Mi a fost dezactivată din cauza prea multor încercări de conectare.</string>
     <string name="exit_browser_warning">Ieşiţi din browser acum?</string>
     <string name="file_dir">Modificați dosarul</string>
-    <string name="file_name">"Nume : "</string>
+    <string name="file_name">"Nume: "</string>
     <string name="file_picker">Selectaţi calea</string>
     <string name="filename_empty_alert_message">Introduceţi numele fișierului :)</string>
     <string name="filename_illegal_alert_message">Un caracter interzis a fost eliminat din numele fișierului</string>
@@ -634,8 +634,8 @@ Părăsiţi această pagină?"</string>
     <string name="return_to_homepage">Mergeţi la pagina de pornire</string>
     <string name="rlz_access_point">Y1</string>
     <string name="root_folder_lable">Nimic</string>
-    <string name="router_download_exist">Acest fișier descărcat există deja</string>
-    <string name="router_download_failed">Descărcare eșuată</string>
+    <string name="router_download_exist">Acest fișier există deja</string>
+    <string name="router_download_failed">"Nu s-a putut descărca"</string>
     <string name="router_download_success">Descărcare finalizată</string>
     <string name="same_bookmarks_warning">Aţi adăugat deja această pagină la marcaje</string>
     <string name="same_folder_name_warning">Un grup cu același nume există deja</string>
@@ -795,7 +795,7 @@ Părăsiţi această pagină?"</string>
     <string name="video_download_downloading">Descărcare</string>
     <string name="video_download_fail">Eşuat</string>
     <string name="video_download_failed">"Nu s-a putut descărca"</string>
-    <string name="video_download_finding_address">Se caută adresa</string>
+    <string name="video_download_finding_address">Se obține adresa de descărcare</string>
     <string name="video_download_pause">Întrerupt</string>
     <string name="video_download_start">Descărcare…</string>
     <string name="video_download_success">Finalizat</string>
@@ -830,8 +830,8 @@ Părăsiţi această pagină?"</string>
     <string name="video_title_prefix_message">"Off-line: "</string>
     <string name="video_unknown_duration">Durată necunoscută</string>
     <string name="view_certificate">Vizualizaţi certificatul</string>
-    <string name="view_document_downloaded_files">Vizualizați fișierele descărcate în Managerul de descărcări</string>
-    <string name="voice_sub_title">Nu știţi ce să spuneţi? Încercaţi, deschideți mi.com!</string>
+    <string name="view_document_downloaded_files">Vizualizați fișierele descărcate în Descărcări</string>
+    <string name="voice_sub_title">"Nu știţi ce să spuneţi? Încercaţi, deschideți mi.com!"</string>
     <string name="voice_title">Rostiți comanda dvs…</string>
     <string name="voice_title_distinguish">Procesare…</string>
     <string name="voice_title_listening">Ascultare…</string>
