--- a/Romanian/main/Contacts.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Contacts.apk/res/values-ro/strings.xml
@@ -1156,7 +1156,7 @@ Apăsaţi pictograma Îmbinare de mai jos pentru a începe.</string>
     <string name="success_message_import_from_account">Import finalizat</string>
     <string name="summary_kind_title">Rezumat</string>
     <string name="t9_search_guide_pinyin_title1">Căutați rapid contactele introducând literele de început</string>
-    <string name="t9_search_guide_pinyin_title2">Tastați 2 și 4 pentru a căuta &lt;font fgcolor=""&gt;A&lt;/font&gt;drian &lt;font fgcolor=""&gt;I&lt;/font&gt;onescu</string>
+    <string name="t9_search_guide_pinyin_title2">Tastați 9 și 4 pentru a căuta Zaharia George</string>
     <string name="t9_search_guide_zhuyin_title1">Căutați rapid contactele introducând literele de început</string>
     <string name="t9_search_guide_zhuyin_title2">Tastați 8 și 2 pentru a căuta &lt;font fgcolor=""&gt;T&lt;/font&gt;atiana &lt;font fgcolor=""&gt;C&lt;/font&gt;azacu</string>
     <string name="take_new_photo">Creaţi o fotografie nouă</string>
