--- a/Romanian/main/BugReport.apk/res/values-ro/strings.xml
+++ b/Romanian/main/BugReport.apk/res/values-ro/strings.xml
@@ -59,6 +59,7 @@
     <string name="feedback_empty_report_list">Niciun raport încă</string>
     <string name="feedback_history_remind_login_desc">"Conectați-vă la contul Mi pentru a vedea detaliile și progresul raportului dumneavoastră"</string>
     <string name="feedback_id">ID: %d</string>
+    <string name="feedback_jira_key">Cheia JIRA: %s</string>
     <string name="feedback_package_log_failed">"Nu s-au putut comprima rapoartele de eroare"</string>
     <string name="feedback_phone_model_label">Modelul telefonului</string>
     <string name="feedback_probability_label">Probabilitate</string>
