--- a/Romanian/main/Updater.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Updater.apk/res/values-ro/strings.xml
@@ -131,7 +131,7 @@
     <string name="notification_reboot_title_hm">Reporniți pentru a aplica actualizarea</string>
     <string name="notification_restart">Actualizați din nou</string>
     <string name="notification_share">Partajaţi</string>
-    <string name="notification_uncrypt_summary_hm">Atingeți pentru a reporni telefonul.</string>
+    <string name="notification_uncrypt_summary_hm">Atingeți pentru a reporni telefonul</string>
     <string name="notification_uncrypt_title_hm">Reporniți telefonul pentru a aplica actualizarea</string>
     <string name="notification_uncrypting">Decriptare actualizare...</string>
     <string name="notification_update_new_version">Actualizare disponibilă</string>
