--- a/Romanian/main/miui.apk/res/values-ro/strings.xml
+++ b/Romanian/main/miui.apk/res/values-ro/strings.xml
@@ -412,6 +412,7 @@
     <string name="heavenly_stems_yi">乙</string>
     <string name="hybrid_provider">Furnizată de %1$s .</string>
     <string name="im">IM</string>
+    <string name="instruction">Instrucțiuni</string>
     <string name="label">MIUI SDK</string>
     <string name="midnight">AM</string>
     <string name="monday">Luni</string>
